--- a/load_data.ipynb
+++ b/load_data.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 此代码用来测试dataloader\n",
+    "# 此代码用来测试task2的dataloader\n",
     "import os\n",
     "import pandas as pd\n",
     "import cv2\n",
